--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.1.0",
+    "@tauri-apps/api": "^1.2.0",
+    "tauri-settings": "^0.1.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
